force-app/main/default/objects/pro_History_Tracking__c/pro_History_Tracking__c.object-meta.xml
<CustomObject>
    <description>JP 07/07/2022 V1 - Custom object used to contain the information relating to changes that were made to values including their previous and new values.</description>
    <label>History Tracking</label>
    <nameField>
        <displayFormat>HN-{0000}</displayFormat>
        <label>History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>History Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>