force-app/main/default/objects/pro_History_Tracking__c/fields/pro_New_Value__c.field-meta.xml
<CustomField>
    <fullName>pro_New_Value__c</fullName>
    <description>JP 07/07/2022 V1 - Custom field used to contain the information relating to the New value that is stored in the object field.</description>
    <label>New Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>