force-app/main/default/objects/pro_History_Tracking__c/fields/Pro_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Pro_Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>