force-app/main/default/objects/pro_History_Tracking__c/fields/pro_Old_Value__c.field-meta.xml
<CustomField>
    <fullName>pro_Old_Value__c</fullName>
    <description>JP 07/07/2022 V1 - Custom field used to contain the information relating to the Old value that was stored in the object field.</description>
    <label>Old Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>