force-app/main/default/objects/pro_History_Tracking__c/fields/Pro_Parent_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Pro_Parent_Record_Id__c</fullName>
    <label>Parent Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>